get request to redirect short url to long url and added comments

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,14 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
-
-<%- include partials/_header %>
-
-<body>
-    
-  <!--take shortURL and display the full URL-->
-
-      <li><a href=''><%= shortURL %></a><%= `:  ${urls[shortURL]}`%></li>
-  
-
-  <!-- Add your EJS code here -->
-</body>
+  <%- include partials/_header %>
+  <body>
+    <!--take shortURL and display the full URL-->
+    <li><a href=''><%= shortURL %></a><%= `:  ${urls[shortURL]}`%></li>
+  </body>
 </html>
