delete a url from urlDatabase

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,13 +7,12 @@
   <!--list url in a table, create href for short urls-->
   <ul>
     <% for (let url in urls){ %>
-     <li>
-      <a href=''><%= url %></a><%= `:  ${urls[url]}` %>
+    
       <!-- adding DELETE button using POST method -->
       <form method="POST" action="/urls/<%= url %>/delete">
-        <input type="submit" value="Delete">
+        <li> <a href=''><%= url %></a><%= `:  ${urls[url]} ` %><input type="submit" value="Delete"></li>
       </form>
-     </li>
+    
     <% } %>
   </ul>
   
