--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,20 @@
-<head>
-  <title>TinyApp</title>
-</head>
+<header>
+
+  <% if (username == undefined){ %>
+  <form method="POST" action="/login">
+        <li>
+        <input id="username" type="text" name="username" placeholder="username" style="width: 200px">
+        <input type="submit" value="submit">
+        </li>
+  </form>
+  <% } else {%>
+  
+  <form method="POST" action="/logout">
+  <li>
+  <%= `Hello ${username} !! ` %>  
+  <input type="submit" value="logout">
+  </li>
+  <% } %>
+
+</header>
+
