added userID to urls for validation

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,7 +10,7 @@
     <!-- add text input and update button-->
     <form method="POST" action="/urls/<%= shortURL %>">
         <li>
-        <input id="longURL" type="text" name="longURL" value="<%= urls[shortURL] %>" style="width: 200px">
+        <input id="longURL" type="text" name="longURL" value="<%= longURL %>" style="width: 200px">
         <input type="submit" value="update">
         </li>
     </form>
