prevent unauthorized users to edit/delete

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,7 @@
 
   <% } else {%>
     <form method="POST" action="/logout">
-        <%= `Hello ${user} !! ` %><input type="submit" value="logout">
+        <%= `Hello ${user.id} !! ` %><input type="submit" value="logout">
     </form>
   <% } %>
 
