--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,7 +20,7 @@
   <ul>
     <% for (let shortURL in urls){ %>
       <li style="display:block;">
-        <a href='/urls/<%= shortURL %>/'><%= shortURL %></a> 
+        <a href='/u/<%= shortURL %>/'><%= shortURL %></a> 
         <%= `:  ${urls[shortURL].url} ` %>
         <!-- delete url -->
         <form method="POST" action="/urls/<%= shortURL %>/delete">
