--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,7 +12,7 @@
     <% } else { %>
 
     <!--take shortURL and display the full URL-->
-    <li><b>ShortURL:</b><a href='/urls/<%= shortURL %>'><%= shortURL %></a></li>
+    <li><b>ShortURL:</b><a href='/u/<%= shortURL %>'><%= shortURL %></a></li>
     <!-- add text input and update button-->
     <form method="POST" action="/urls/<%= shortURL %>">
         <li>
